# SleipnirMechanismPlanner

./: .gitignore  CMakeLists.txt  trajectory.json  visualizer.py
src/: main.cpp
